# ContinuePretraining

./: .gitignore  README.md  setup.cfg
bash/: evaluate_on_cp_data.sbatch.sh  evaluate_on_sft_data.sbatch.sh  interactive.srun.sh  test_sweep.sbatch.sh
bash/cp/: batch_compute_tc_score.sh  compute_tc_score.srun.sh  train_stage1.sbatch.sh  train_stage1_mpt.sbatch.sh  train_stage1_opt.sbatch.sh  train_stage2.sbatch.sh  train_stage2_mpt.sbatch.sh  train_stage2_opt.sbatch.sh
bash/eval/: eval_mcq.sh  evaluate_on_sft_data.sbatch.sh
config/: example_for_instruction_tuning.yaml  example_for_pre_training.yaml  llama2-13b|tokenizer=ccw|data=k.yaml  llama2-13b|tokenizer=ccw|data=k>cc.yaml  llama2-7b-chat|tokenizer=ccw|data=cc.yaml  llama2-7b-chat|tokenizer=ccw|data=cc>j-v2.yaml  llama2-7b-chat|tokenizer=ccw|data=j-v2+cc.yaml  llama2-7b-chat|tokenizer=ccw|data=j-v2.yaml  llama2-7b-chat|tokenizer=ccw|data=j-v2>cc.yaml
environment/: deepspeed.yml  default.yaml  h100.yaml  setup.sh
scripts/: export_model.py  generate.py  main.py  pre_process_pre_training_data.py  prune_tokens_and_embeddings.py
scripts/cp/: compute_tc_score.py  convert_pl_to_hf.py  convert_pl_to_peft.py  evaluate.py  main.py  merge_extended_tokens.py  prepare_data_for_pre_training.py  prepare_data_for_pretrain.py  train.py
scripts/data/: count_vocab.py  normalize_as_aigfag.py  pre_process_classical_chinese.py
scripts/eval/: evaluate.py  evaluate_on_cp_data.py  evaluate_on_mcq.py  evaluate_on_sft_data.py
scripts/shell/: train.sh
scripts/test/: test_sweep.py
shell_scripts/: train.sh
(+148 files in other folders)
