[metadata]
name = taide_cp
author = ShinoharaHare
author_email = anna.shiker1822@gmail.com

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    sbatchx = taide_cp.cli.slurm.sbatchx:main
    srunx = taide_cp.cli.slurm.srunx:main
